syntax = "proto2";

package room;

import "error.proto";

// RoomGiveUpReq 认输请求
message RoomGiveUpReq{
    optional uint32 reserve = 1; // 保留
}

// RoomGiveUpRsp 认输响应
message RoomGiveUpRsp{
    optional RoomError err_code = 1; // 错误码
}

// RoomGiveUpNtf 认输通知
message RoomGiveUpNtf{
    repeated uint64 player_id = 1; // 认输玩家ID
}